# shredder

./: README.md  pyproject.toml
docker/: compose.grobid.yml
docs/: CLI_SMOKE_TEST.md  CODEX_FIX_PROMPT_M1_DISCOVERY.md  CODEX_NEXT_SESSION_PROMPTS.md  COMMIT_REVIEW_M1_DISCOVERY.md  DESIGN.md  IMPLEMENTATION_TODO_CHECKLIST.md  WORKPLAN.md
examples/: project_theme.yaml  schema.yaml
schemas/: artifact_extraction.yaml  artifact_sections.yaml  skills_trends_input.yaml  skills_trends_output.yaml
src/: __init__.py  app.py  cli.py
src/analysis_skills/: manifest.yaml  registry.py  trends_over_time.py
src/connectors/: base.py  crossref.py  http.py  openalex.py  searxng.py  semantic_scholar.py
src/extraction/: llm_client.py  loader.py  selector.py  verifier.py  writer.py
src/kb/: __init__.py  store.py
src/orchestrator/: agentic.py  discovery.py  retrieval.py  runner.py  steps.py
src/parsing/: grobid_wrapper.py  normalize.py
src/render/: generator.py
src/retrieval/: __init__.py  adapters.py  service.py
src/utils/: paths.py  yamlx.py
src/workspace/: manager.py  overlay.py  validation.py
tests/: test_cli_flow.py  test_connectors_http.py  test_connectors_searxng.py  test_discovery_connectors.py  test_discovery_dedup.py  test_discovery_dedup_ordering.py  test_discovery_provenance.py  test_retrieval_agentic_i1.py  test_retrieval_deterministic.py  test_retrieval_index.py  test_retrieval_open.py  test_retrieval_rc1_matrix.py  test_yaml_adapter.py
tests/fixtures/: deterministic_benchmark_cases.json
