[project]
name = "shredder"
version = "0.1.0"
description = "Local-first YAML-centric research pipeline MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "typer>=0.12.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
