[project]
name = "shredder"
version = "0.1.0"
description = "Local-first YAML-centric research pipeline MVP"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "typer>=0.12.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
retrieval = [
  "pyalex>=0.18.0",
  "habanero>=1.2.6",
  "semanticscholar>=0.8.4",
  "arxiv>=2.1.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
